[tool.poetry]
name = "vita"
version = "0.1.0"
description = ""
authors = ["applyuser160 <syunsuke130121@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"
sqlmodel = "^0.0.22"
python-dotenv = "^1.0.1"
coloredlogs = "^15.0.1"
mysqlclient = "^2.2.6"
pymysql = "^1.1.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
strawberry-graphql = "^0.254.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
